--- a/app/src/main/res/layout/fragment_edit_staff.xml
+++ b/app/src/main/res/layout/fragment_edit_staff.xml
@@ -73,7 +73,7 @@
 
     </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonSave"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -81,6 +81,8 @@
         android:text="@string/save_button"
 
         android:backgroundTint="@color/black"
+        style="@style/Widget.Material3.Button"
+        android:textSize="20sp"
 
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
