--- a/app/src/main/res/layout/fragment_edit_visitor.xml
+++ b/app/src/main/res/layout/fragment_edit_visitor.xml
@@ -12,49 +12,46 @@
         android:layout_width="40dp"
         android:layout_height="40dp"
 
+        android:baselineAlignBottom="true"
         android:src="@drawable/icon_person"
 
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBaseline_toBaselineOf="@id/textName"
         app:layout_constraintStart_toStartOf="parent"/>
 
-    <TextView
+    <ImageView
         android:id="@+id/imgPhone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
 
-        android:text="@string/label_phone"
-        android:fontFamily="@font/roboto_medium"
-        android:textSize="20sp"
-
-        android:layout_marginTop="15dp"
-
-        app:layout_constraintBottom_toTopOf="@id/labelRoom"
+        android:src="@drawable/icon_phone"
+        android:baselineAlignBottom="true"
+        app:layout_constraintBaseline_toBaselineOf="@id/textPhone"
+        app:layout_constraintBottom_toTopOf="@id/imgRoom"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imgPerson"/>
 
-    <TextView
-        android:id="@+id/labelRoom"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:id="@+id/imgRoom"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
 
-        android:text="@string/label_house"
-        android:fontFamily="@font/roboto_medium"
-        android:textSize="20sp"
-
-        app:layout_constraintTop_toBottomOf="@id/imgPhone"
+        android:baselineAlignBottom="true"
+        android:src="@drawable/icon_room"
+        app:layout_constraintBaseline_toBaselineOf="@id/textRoom"
+        app:layout_constraintBottom_toTopOf="@id/labelDate"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/labelDate"/>
+        app:layout_constraintTop_toBottomOf="@id/imgPhone" />
 
-    <TextView
+    <ImageView
         android:id="@+id/labelDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
 
-        android:text="@string/label_date"
-        android:fontFamily="@font/roboto_medium"
-        android:textSize="20sp"
-
-        app:layout_constraintTop_toBottomOf="@id/labelRoom"
+        android:src="@drawable/icon_calender"
+        android:baselineAlignBottom="true"
+        app:layout_constraintBaseline_toBottomOf="@id/datePickerBtn"
+        app:layout_constraintTop_toBottomOf="@id/imgRoom"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
 
@@ -63,7 +60,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:barrierDirection="end"
-        app:constraint_referenced_ids="imgPerson, imgPhone, labelRoom, labelDate"/>
+        app:constraint_referenced_ids="imgPerson, imgPhone, imgRoom, labelDate"/>
 
     <android.widget.Space
         android:id="@+id/space"
@@ -79,7 +76,6 @@
         android:hint="@string/label_name"
 
         app:layout_constraintStart_toEndOf="@id/space"
-        app:layout_constraintBaseline_toBaselineOf="@id/imgPerson"
         app:layout_constraintEnd_toEndOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -97,7 +93,6 @@
         android:layout_height="wrap_content"
 
         android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
 
         android:hint="@string/label_surname"
 
@@ -119,9 +114,13 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
+        android:layout_marginTop="5dp"
+
+        android:hint="@string/label_phone"
+
         app:layout_constraintStart_toEndOf="@id/space"
-        app:layout_constraintBaseline_toBaselineOf="@id/imgPhone"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textSurname">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
@@ -137,8 +136,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
 
+        android:layout_marginTop="5dp"
+        android:hint="@string/label_house"
+
+        app:layout_constraintTop_toBottomOf="@id/textPhone"
         app:layout_constraintStart_toEndOf="@id/space"
-        app:layout_constraintBaseline_toBaselineOf="@id/labelRoom"
         app:layout_constraintEnd_toEndOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -155,14 +157,29 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
 
-        style="@style/Widget.Material3.Button.Icon"
+        style="@style/Widget.Material3.Button"
         android:textSize="20sp"
         android:backgroundTint="@color/black"
-        app:icon="@drawable/icon_calender"
         android:text="@string/title_picker"
 
-        app:layout_constraintStart_toEndOf="@id/space"
-        app:layout_constraintBaseline_toBaselineOf="@id/labelDate"/>
+        android:layout_marginTop="5dp"
+        app:layout_constraintTop_toBottomOf="@id/textRoom"
+        app:layout_constraintStart_toEndOf="@id/space"/>
+
+    <TextView
+        android:id="@+id/dateText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:fontFamily="@font/roboto_medium"
+        android:textSize="18sp"
+
+        android:layout_marginStart="5dp"
+
+        app:layout_constraintStart_toEndOf="@id/datePickerBtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@id/datePickerBtn"
+        app:layout_constraintBottom_toBottomOf="@id/datePickerBtn"/>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/buttonSave"
